# AdvancedGraphics

./: .clang-format  .gitignore  AdvancedGraphics.filters  AdvancedGraphics.sln  AdvancedGraphics.vcxproj  AdvancedGraphics.vcxproj.filters  CMakeLists.txt  README.md  build.sh  game.cpp  game.h  precomp.h  surface.cpp  surface.h  template.cpp  template.h  texturedCube.mtl  utils.h  vectors.cpp  vectors.h
assets/: crate1.mtl  cube.mtl  legocar.mtl  sibenik.mtl
src/: bvh.cpp  bvh.h  camera.cpp  camera.h  color.cpp  color.h  game.cpp  game.h  light.cpp  light.h  main.cpp  precomp.h  primitive.cpp  primitive.h  ray.cpp  ray.h  skydome.cpp  skydome.h  surface.cpp  surface.h  timer.h  utils.h  vectors.cpp  vectors.h
